margin to keep out of box, avoid filter on padding

--- a/currentSite/style.css
+++ b/currentSite/style.css
@@ -65,7 +65,7 @@ a:visited {
   color: white;
 }
 .card h2{
-  padding-bottom: 4%;
+  margin-bottom: 4%;
 }
 
 .education-card .card-header{
